# TrueEye

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile  QUICKSTART.md  README.md  README_FLOW.md  SECURITY.md  pyproject.toml  shell.nix  start.sh
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
src/trueeye/: __init__.py  api.py  models.py  utils.py
src/trueeye/static/: index.html
tests/: test_api.py
