[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trueeye"
version = "0.1.0"
description = "Intelligent Media Literacy System"
authors = [
    {name = "Gonzalo Romero", email = "info@deeprat.tech"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "requests>=2.31,<3.0",
    "pydantic>=2.5,<3.0",
    "python-multipart>=0.0.6,<1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src/trueeye"]
strict = true